tests/snapshots/exn__new_with_source.snap
---
source: tests/exn.rs
expression: e
---
top, at tests/exn.rs:51:13
└─ source, at tests/exn.rs:51:13
