tests/snapshots/exn__option_ext.snap
---
source: tests/exn.rs
expression: result.unwrap_err()
---
An error, at C:/Users/Andrew Lehmer/source/repos/exn/src/option.rs:43:28
