tests/snapshots/exn__result_ext.snap
---
source: tests/exn.rs
expression: result.unwrap_err()
---
Another error, at tests/exn.rs:60:44
└─ An error, at tests/exn.rs:60:44
